MCA App/Release/Dynamic Funding Application/Dynamic Funding Application/src/objects/Dynamic_Sections__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Field_Set_API_Name__c</fullName>
        <label>Field Set API Name</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header_Name__c</fullName>
        <label>Header Name</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Column__c</fullName>
        <inlineHelpText>Please enter the number of columns to be displayed on the funding application - minimum 3, maximum 6</inlineHelpText>
        <label>Number of Columns</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <label>Object Type</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppotunity_Contact_API_Name__c</fullName>
        <label>Oppotunity - Contact API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort__c</fullName>
        <label>Sort</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>DFADynamicSections</label>
</CustomObject>